--- a/app/assets/javascripts/backbone/templates/static/about.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/static/about.jst.ejs
@@ -1,4 +1,6 @@
 <div class="content-container">
-  <h3>About Yale Events</h3>
-  <p>Yale Events is an application for Yale students to discover events on campus and subscribe to various event mailing lists. It also provides management tools for student organizations. All development and design was done by Paul Fletcher-Hill (PC '15) and Rafi Khan (PC '15)</p>
+  <h3>Yale Go</h3>
+  <p style='font-size: 120%; width: 70%; margin: 0 auto; text-align: justify;'>
+    Yale Go is an application for Yale students to discover events on campus and subscribe to various event mailing lists. It also provides management tools for student organizations. All development and design was done by Paul Fletcher-Hill (PC '15) and Rafi Khan (PC '15).
+  </p>
 </div>
