--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -1,3 +1,14 @@
 .btn-toolbar > a {
   vertical-align: top;
 }
+/*
+.btn {
+  border-radius: 0;
+}
+
+.btn-group  {
+  > .btn:first-child, .btn:last-child {
+    border-radius: 0;
+  }
+}
+*/
