--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
 <!--[if gt IE 8]><!--><html xmlns:fb="http://ogp.me/ns/fb#"><!--<![endif]-->
 <head>
   <title>Yale Go</title>
-  <link rel="icon" href="/assets/y_logo_200.png" />
+  <link rel="shortcut icon" href="/assets/y_logo_200.png" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
