--- a/app/assets/javascripts/backbone/templates/browse/organization.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/browse/organization.jst.ejs
@@ -1,7 +1,7 @@
 <div class="cover"></div>
 <div class="content">
   <div class="name"><a href="#organizations/<%= result.id %>"><%= result.get('name') %></a></div>
-  <div id="categories"></div>
+  <div class="categories"></div>
   <% if(result.get('bio')) { %>
     <div class="description"><%= result.get('bio') %></div>
   <% } %>
