--- a/app/assets/javascripts/backbone/templates/dashboard/users/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/users/show.jst.ejs
@@ -7,6 +7,6 @@
     <div class="email"><%= user.email %></div>
   </td>
   <td>
-    <button>Edit</button>
+    <div class='btn'>Edit</div>
   </td>
 </tr>
