--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 @import "bourbon";
 @import "bootstrap";
+@import "backbone-forms-rails";
 @import "mixins";
 @import "bootstrap_override";
 @import "main";
