--- a/app/assets/javascripts/backbone/templates/calendar/month/day.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/month/day.jst.ejs
@@ -1,2 +1,7 @@
-<span class="month-day-date"><%= date.format("D") %></span>
+<div class="month-date">
+  <% if(date.date() === 1) { %>
+    <%= date.format("MMM") %>
+  <% } %>
+  <%= date.format("D") %>
+</div>
 <div class="cal-events"></div>
