--- a/app/assets/javascripts/backbone/templates/dashboard/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/events/index.jst.ejs
@@ -2,14 +2,14 @@
   <div id="event-form">
     <button id="close-event">Close</button>
     <form id="new-event">
-      <input name="name" placeholder="Event Name"/>
-      <input name="start_at" placeholder="Start At"/>
-      <input name="end_at" placeholder="End At"/>
-      <input name="location" placeholder="Location"/>
+      <input type='text' name="name" placeholder="Event Name"/>
+      <input type='text' name="start_at" placeholder="Start At"/>
+      <input type='text' name="end_at" placeholder="End At"/>
+      <input type='text' name="location" placeholder="Location"/>
       <textarea name="description" placeholder="Description"></textarea>
       <button type="submit">Save Event</button>
     </form>
   </div>
-  <button id="new-event">New Event</button>
+  <div id="new-event" class="btn">New Event</div>
   <table id='organization-events-list'></table>
 </div>
