--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,30 +10,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <%= stylesheet_link_tag "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 <div class="wrapper">
   <div class="header">
     <div class="header-container">
-      <a href="/"><div class="link">
-        <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
-      </div></a>
-      <% if current_user %>
-        <a href="#browse">
-          <div class="link">Browse</div>
-        </a>
-        <a href="#calendar">
-          <div class="link">Calendar</div>
-        </a>
-        <a href="#dashboard">
-          <div class="link">Dashboard</div>
-        </a>
-        <a href="#about">
-          <div class="link">About</div>
-        </a>
-      <% end %>
+      <div class="pull-left">
+        <a href="/"><div class="link">
+          <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
+        </div></a>
+        <% if current_user %>
+          <a href="#browse">
+            <div class="link">Browse</div>
+          </a>
+          <a href="#calendar">
+            <div class="link">Calendar</div>
+          </a>
+          <a href="#dashboard">
+            <div class="link">Dashboard</div>
+          </a>
+          <a href="#about">
+            <div class="link">About</div>
+          </a>
+        <% end %>
+      </div>
       <div class="pull-right">
         <% if current_user %>
           <a href="/mail">
@@ -59,7 +60,19 @@
 
   <%= yield %>
 </div>
+<%= javascript_include_tag "application" %>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC09xDhfZSSQwy2-P9x7LAyz7T-TLjNQwo&sensor=false">
+</script>
+<script type="text/javascript">
+  // Setting global event format string
+  Gandalf.currentUser = new Gandalf.Models.User();
+  Gandalf.currentUser.url = '/me';
+  Gandalf.currentUser.fetch({
+    success: function() {
+      window.router = new Gandalf.Router();
+      Backbone.history.start();
+    }
+  });
 </script>
 </body>
 </html>
