--- a/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
@@ -1,6 +1,6 @@
 <div class="content-calendar"></div>
 <div class="content-body">
-  <div class="content-body-container">
+  <div class="container">
     <div class="cal-nav">
       <a href="#calendar/today/week" class="btn">Today</a>
       <div class="btn-group" style="margin-right: 30px;">
@@ -16,5 +16,3 @@
     <div class="body-feed"></div>
   </div>
 </div>
-<div class="global-overlay"></div>
-<div class="cal-popover"></div>
