--- a/app/assets/javascripts/backbone/templates/organizations/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/show.jst.ejs
@@ -1,7 +1,6 @@
-<div class="content-calendar">
-</div>
+<div class="content-calendar"></div>
 <div class="content-body">
-  <div class="content-body-container">
+  <div class="container">
     <div class="body-header">
       <h1><%= organization.get('name') %></h1>
       <button class="follow"></button>
