--- a/app/assets/javascripts/backbone/templates/popover/event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/event.jst.ejs
@@ -1,8 +1,8 @@
-<div class='cal-popover-head' style='background-color: <%= color %>;'>
+<div class='gandalf-popover-head' style='background-color: <%= color %>;'>
   <strong><%= e.get("name") %></strong>
   <span class="close">×</span>
 </div>
-<div class="cal-popover-body">
+<div class="gandalf-popover-body">
   <table>
     <tr>
       <td>Held by</td>
@@ -37,6 +37,6 @@
       <td><%= e.get("address") %></td>
     </tr>
   </table>
-  <p class="cal-popover-description"><%= e.get("description") %></p>
+  <p class="gandalf-popover-description"><%= e.get("description") %></p>
   <div id="map-canvas"></div>
 </div>
