--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,8 @@
 @import "mixins";
 @import "bootstrap_override";
 @import "main";
+@import "popover";
 @import "feed";
 @import "browse";
 @import "calendar";
-@import "organizations";
+@import "dashboard";
