--- a/app/assets/javascripts/backbone/templates/browse/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/browse/index.jst.ejs
@@ -1,16 +1,16 @@
-<div class="content-header">
+<div class="content-header container">
   <h1>Discover</h1>
 </div>
-<div class="content-container">
+<div class="content-container container">
   <div class="content-left">
     <div class="left-header">Search Events, Organizations or Categories:</div>
     <div class='left-search'>
       <input placeholder="Search <%= type %>..."></input>
     </div>
     <ul class="left-list">
-      <li><a data-type='organizations' href="#browse/organizations">Organizations</a></li>
-      <li><a data-type='categories' href="#browse/categories">Categories</a></li>
-      <li><a data-type='events' href="#browse/events">Events</a></li>
+      <a href="#browse/organizations"><li data-type='organizations'>Organizations</li></a>
+      <a href="#browse/categories"><li data-type='categories'>Categories</li></a>
+      <a href="#browse/events"><li data-type='events'>Events</li></a>
     </ul>
   </div>
   <div class="content-main" id="browse-list">
