--- a/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
@@ -1,7 +1,7 @@
-<div class="content-header">
-  <h1>Organization Dashboard</h1>
+<div class="content-header container">
+  <h1>Your Organization Dashboard</h1>
 </div>
-<div class="content-container">
+<div class="content-container container">
   <div class="content-left">
     <div class="left-header">Your Organizations:</div>
     <ul class="left-list"></ul>
