--- a/app/assets/javascripts/backbone/templates/dashboard/menu.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/menu.jst.ejs
@@ -1,4 +1,3 @@
-<li><a data-type='info' href="#dashboard/<%= id %>/info">Organization Info</a></li>
-<li><a data-type='events' href="#dashboard/<%= id %>/events">Events</a></li>
-<li><a data-type='users' href='#dashboard/<%= id %>/users'>Users</a></li>
-<li><a data-type='settings' href="#dashboard/<%= id %>/settings">Settings</a></li>
+<a href="#dashboard/<%= id %>/events"><li data-type='events'>Events</li></a>
+<a href='#dashboard/<%= id %>/users'><li data-type='users'>Users</li></a>
+<a href="#dashboard/<%= id %>/settings"><li data-type='settings'>Settings</li></a>
