--- a/app/assets/javascripts/backbone/templates/dashboard/settings/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/settings/index.jst.ejs
@@ -1,1 +1,12 @@
-<div id='organization-settings'>Organization Settings</div>
+<form id='organization-form' accept-charset='UTF-8' action='/organizations' enctype='multipart/form-data' method='post' data-remote='true'>
+  <label>Name:</label>
+  <input type='text' name='name' value='<%= org.get('name') %>'/>
+  <label>Description:</label>
+  <textarea name='bio' placeholder='What is <%= org.get('name') %>..?' value='<%= org.get('bio') %>' maxlength="300"></textarea>
+  <label>Logo:</label>
+  <% image = org.get("image")  %>
+  <div class='image loading'><img height="60px" width="50px" src='<%= image ? image.thumbnail.url : '' %>' alt="No image for <%= org.get("name") %>."/></div>
+  <input id='organization-image' name='image' type='file' accept="image/*"/>
+  <br/>
+  <input type='submit' class='btn btn-info' value='Update Organization' />
+</form>
