--- a/app/assets/javascripts/backbone/templates/dashboard/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/events/index.jst.ejs
@@ -1,5 +1,5 @@
 <div id="organization-events">
-  <h4>Upcoming events for <%= org.get("name") %></h4>
+  <h4>Upcoming events for <%= name %></h4>
   <div id="event-form">
     <button id="close-event">Close</button>
     <form id="new-event">
