--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,5 +1,3 @@
-/* ========== LAYOUT ========= */
-
 #organization {
   border-right: 1px solid #dadada;
   border-bottom: 1px solid #dadada;
@@ -18,8 +16,8 @@ ul.main-menu {
     border-right: 1px solid #dadada;
     border-top: 1px solid #dadada;
     color: #333;
-    @include transition(border 0);
-    @include transition(background 0.2s);
+    font-weight: bold;
+    @include transition(background 0.2s, border 0.2s);
     &:hover {
       background: #F1F1F1;
     }
