new event almost working

--- a/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
@@ -2,11 +2,10 @@
   <strong><%= e.get("name") %></strong>
   <span class="close">×</span>
 </div>
-<div class="gandalf-popover-body">
+<div class="gandalf-popover-body show-event">
   <table>
     <tr>
       <td>Held by</td>
-
       <td>
         <a href="#organizations/<%= e.get("organization_id") %>">
           <%= e.get("organization") %>
