--- a/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
@@ -7,8 +7,8 @@
     <ul class="left-list"></ul>
   </div>
   <div class="content-main">
-    <ul class="main-menu">
+    <ul class="dash-menu">
     </ul>
-    <div class="main-content"></div>
+    <div class="dash-content"></div>
   </div>
 </div>
