--- a/app/assets/javascripts/backbone/templates/dashboard/settings/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/settings/index.jst.ejs
@@ -1,11 +1,11 @@
-<form id='organization-form' accept-charset='UTF-8' action='/organizations' enctype='multipart/form-data' method='post' data-remote='true'>
+<form action="#" id="dash-settings-form">
   <label>Name:</label>
   <input type='text' name='name' value='<%= name %>'/>
   <label>Description:</label>
-  <textarea name='bio' placeholder='What is <%= name %>..?' value='<%= bio %>' maxlength="300"></textarea>
+  <textarea name='bio' placeholder='What is <%= name %>..?'maxlength="300"><%= bio %></textarea>
   <label>Logo:</label>
-  <div class='image loading'><img height="60px" width="50px" src='<%= image ? image.thumbnail.url : '' %>' alt="No image for <%= name %>."/></div>
+  <div class='image loading'><img src='<%= image ? image.thumbnail.url : '' %>' alt="No image for <%= name %>."/></div>
   <input id='organization-image' name='image' type='file' accept="image/*"/>
   <br/>
-  <input type='submit' class='btn btn-info' value='Update Organization' />
+  <input type='submit' class='btn btn-info' id="org-update" value='Update Organization' />
 </form>
