--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -1,3 +1,12 @@
+input, textarea {
+  &.error {
+    border-color: #B94A48;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  }
+}
+
 .btn-toolbar > a {
   vertical-align: top;
 }
