--- a/app/assets/javascripts/backbone/templates/dashboard/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/events/index.jst.ejs
@@ -1,5 +1,5 @@
 <div id="organization-events">
   <h4 class='pull-left' style='margin: 0 0 30px;'>Upcoming events for <%= name %></h4>
   <div id="new-event-btn" class="btn btn-small btn-primary pull-right">Add an event</div>
-  <table class='dash-events-list'></table>
+  <table class='dash-list'></table>
 </div>
