--- a/app/assets/javascripts/backbone/templates/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/show.jst.ejs
@@ -1,4 +1,4 @@
-<div class="content-body-container">
+<div class="content-container container">
   <div class="body-header">
     <h1><%= event.get('name') %></h1>
   </div>
