--- a/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
@@ -2,15 +2,18 @@
 <div class="content-body">
   <div class="container">
     <div class="cal-nav">
-      <a href="#calendar/today/week" class="btn">Today</a>
-      <div class="btn-group" style="margin-right: 30px;">
-        <a class="btn previous">&lt;</a>
-        <span class="btn cal-header-date" style="font-size: 14px;"></span>
-        <a class="btn next">&gt;</a>
+      <a href="#calendar/today/week" class="btn btn-small">Today</a>
+      <div class="btn-group">
+        <a class="btn btn-small previous">&lt;</a>
+        <span class="btn btn-small cal-header-date" style="font-size: 14px;"></span>
+        <a class="btn btn-small next">&gt;</a>
+      </div>
+      <div class="btn btn-small toggle-multiday" rel='tooltip' title='Toggle multiday event visibility'>
+        <i class='icon-eye-close'></i>
       </div>
       <div class="btn-group pull-right">
-        <a class="btn week">Week</a>
-        <a class="btn month">Month</a>
+        <a class="btn btn-small week">Week</a>
+        <a class="btn btn-small month">Month</a>
       </div>
     </div>
     <div class="body-feed"></div>
