--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -1,6 +1,6 @@
 .left-search input {
-  width: 210px;
-  padding: 15px;
+  width: 90%;
+  padding: 5%;
   border: none;
   border-top: 1px solid #dadada;
 }
